# kspaceFirstOrder-CUDA-linux

./: .gitignore  CMakeLists.txt  Makefile
MatrixClasses/: CufftComplexMatrix.cpp
cmake/: SetupCUDA.cmake
